<resources>
    <string name="app_name">Dolphin</string>
    <string name="title_activity_main">Dolphin</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="search">输入用户ID/标签</string>
    <string name="title_activity_search">搜索</string>
    <string name="title_activity_picture">图片</string>

    <string name="camera">相机</string>
    <string name="searchByName">搜索用户</string>
    <string name="searchByTab">搜索标签</string>
    <string name="Pictures">图片</string>
    <string name="title_activity_edit_picture">编辑图片</string>
    <string name="title_activity_view_picture">查看图片</string>
    <string name="like">赞</string>
    <string name="cancel_like">取消赞</string>
    <string name="comment">评论</string>
    <string name="comment_all">查看全部</string>
    <string name="comment_text">说点什么吧~</string>
    <string name="upload">上传</string>
    <string name="give_up">放弃</string>
    <string name="title_activity_register">注册</string>

    <string name="title_activity_login">Dolphin</string>

    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_sign_in_short">登录</string>

    <string name="error_invalid_email">邮箱格式错误</string>
    <string name="error_invalid_password">密码长度错误（应为6~15个字符）</string>

    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">该项不能为空</string>
    <string name="register">立即注册</string>
    <string name="user_name">用户名</string>
    <string name="user_name_invalid">用户名只能使用英文字母，下划线，数字及汉字，长度2~15个字符</string>
    <string name="title_activity_user_list">名单</string>
    <string name="enter_password">输入密码</string>
    <string name="reenter_password">再次输入密码</string>
    <string name="password_not_same">密码不一致</string>
    <string name="OK">确 定</string>
    <string name="title_activity_user_page">UserPageActivity</string>
    <string name="auto_login">自动登录</string>
    <string name="remember_password">记住密码</string>
    <string name="title_activity_general">GeneralActivity</string>
    <string name="view_origin_picture">原图</string>
    <string name="author">  </string>
    <string name="upload_time">  </string>
    <string name="title_activity_change_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="cancel">取消</string>
    <string name="email">邮箱</string>
    <string name="concern">关注</string>
    <string name="remove_from_concern">取消关注</string>
    <string name="add_to_blacklist">加入黑名单</string>
    <string name="remove_from_blackList">从黑名单中移除</string>
    <string name="manage_picture">管理图片</string>
    <string name="upload_pictures">上传图片</string>
    <string name="before_concern">没有关注该用户，无法查看ta的图片</string>
    <string name="no_pictures">没有图片…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recent">动态</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <string name="toast_in_searching">正在搜索中</string>
    <string name="toast_picture_error">图片出错！</string>
    <string name="toast_downloading_picture_error">下载图片出错！</string>
    <string name="toast_downloading_picture_success">下载图片成功！</string>
    <string name="toast_refreshing_error">刷新出错！</string>
    <string name="toast_comment_failed">评论失败</string>
    <string name="toast_operation_error">操作失败</string>
    <string name="toast_register_failed">注册失败</string>
    <string name="toast_losing_connection">没有网络连接</string>
    <string name="toast_fetching_list_error">获取列表失败</string>
    <string name="toast_fetching_information_failed">获取信息失败</string>
    <string name="toast_search_failed">搜索失败</string>
    <string name="toast_before_login">您还未登录！</string>
    <string name="toast_comment_upload_too_quickly">5秒内只能上传一次评论</string>
    <string name="toast_tag_not_unique">存在相同的标签</string>
    <string name="toast_tag_invalid">标签应为10字节以内，不含空格的字符串</string>
    <string name="toast_tag_is_empty">标签不能为空</string>
    <string name="toast_get_comment_failed">获得评论失败</string>

    <string name="no_search_result_users">没有找到用户…</string>
    <string name="no_search_result_tags">没有找到图片…</string>
    <string name="invalid_input_in_search">输入不合法</string>
    <string name="search_content_missing">缺少搜索内容</string>
    <string name="manage_tags">管理标签</string>
    <string name="loading">正在载入…</string>


    <string name="click_to_refresh">获取图片信息失败\n点击刷新</string>
    <string name="title_activity_choose_picture">上传图片</string>
    <string name="choose_from_gallery">从相册中选择</string>
    <string name="take_from_camera">打开相机</string>
</resources>
