<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context="com.example.team.myapplication.RegisterActivity"
    android:gravity="center_horizontal">

    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_view" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_layout">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_user_name"
                android:inputType="textPersonName"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/user_name"
                android:imeOptions="actionNext"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/register_email"
                android:layout_below="@+id/register_user_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/prompt_email"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/register_password"
                android:layout_below="@+id/register_email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/enter_password"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/register_password_again"
                android:layout_below="@+id/register_password"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/reenter_password"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OK"
                android:id="@+id/register_ok"
                android:layout_below="@+id/register_password_again"
                android:layout_centerHorizontal="true"
                style="?android:textAppearanceSmall"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
