<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context="com.example.team.myapplication.SearchActivity"
    android:id="@+id/SearchActivity"
    android:background="@color/背景蓝">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/editText"
            android:hint="@string/search"
            android:background="@drawable/textview_style4"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchByName"
                android:id="@+id/button3"
                android:textColor="@color/白色"
                android:layout_marginLeft="84dp"
                android:layout_marginStart="84dp"
                android:background="@drawable/button_style2"
                android:layout_alignTop="@+id/button4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchByTab"
                android:id="@+id/button4"
                android:textColor="@color/白色"
                android:background="@drawable/button_style3"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/button3"
                android:layout_toEndOf="@+id/button3" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
